RESOLVED FIXED44294
After r65681, caret no longer displays promptly while editing form fields
https://bugs.webkit.org/show_bug.cgi?id=44294
Summary After r65681, caret no longer displays promptly while editing form fields
Simon Fraser (smfr)
Reported 2010-08-19 14:39:14 PDT
r65681 caused the caret to use the last-computed caret rect when painting, rather than forcing a style update. That seems to have changed the drawing of the caret in the middle of editing. This testcase shows a pixel difference as a result: fast/forms/input-text-scroll-left-on-blur.html
Attachments
Patch (1.67 KB, patch)
2010-08-20 14:46 PDT, Simon Fraser (smfr)
tony: review+
Simon Fraser (smfr)
Comment 1 2010-08-19 15:03:53 PDT
Hmm, this only seems to be when you hit the end of the field and start to scroll.
Simon Fraser (smfr)
Comment 2 2010-08-20 09:53:36 PDT
Simon Fraser (smfr)
Comment 3 2010-08-20 14:46:42 PDT
Enrica Casucci
Comment 4 2010-08-23 08:50:38 PDT
This looks good to me.
Simon Fraser (smfr)
Comment 5 2010-08-24 14:02:10 PDT
WebKit Review Bot
Comment 6 2010-08-24 14:46:46 PDT
http://trac.webkit.org/changeset/65934 might have broken Leopard Intel Release (Tests) The following changes are on the blame list: http://trac.webkit.org/changeset/65933 http://trac.webkit.org/changeset/65934
Note You need to log in before you can comment on or make changes to this bug.